--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.7.2
 Django==5.0.3
 djangorestframework==3.15.1
+gunicorn==22.0.0
+packaging==24.0
 pillow==10.3.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
 sqlparse==0.4.4
 typing_extensions==4.10.0
-whitenoise==6.4.0
