--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==22.0.0
 packaging==24.0
 pillow==10.3.0
 psycopg2-binary==2.9.9
+PyJWT==2.8.0
 python-decouple==3.8
 sqlparse==0.4.4
 typing_extensions==4.10.0
